Added test case for full house and fixed code accordingly